// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`homePageReducer handles the createComment action 1`] = `
Immutable.Map {
  "loading": true,
  "error": false,
  "article": Immutable.Map {
    "title": "google",
    "uri": "https://google.com",
    "github": "",
    "description": "Search Engine",
    "image": "1548552844157-Screen Shot 2019-01-26 at 5.32.10 PM.png",
    "comments": Immutable.List [],
    "likes": 1,
  },
}
`;

exports[`homePageReducer handles the createCommentError action 1`] = `
Immutable.Map {
  "loading": false,
  "error": Immutable.Map {},
  "article": Immutable.Map {
    "title": "google",
    "uri": "https://google.com",
    "github": "",
    "description": "Search Engine",
    "image": "1548552844157-Screen Shot 2019-01-26 at 5.32.10 PM.png",
    "comments": Immutable.List [],
    "likes": 1,
  },
}
`;

exports[`homePageReducer handles the createCommentSuccess action 1`] = `
Immutable.Map {
  "loading": false,
  "error": false,
  "article": Immutable.Map {
    "title": "google",
    "uri": "https://google.com",
    "github": "",
    "description": "Search Engine",
    "image": "1548552844157-Screen Shot 2019-01-26 at 5.32.10 PM.png",
    "comments": Immutable.List [
      Immutable.Map {},
    ],
    "likes": 1,
  },
}
`;

exports[`homePageReducer handles the likeArticle action 1`] = `
Immutable.Map {
  "loading": true,
  "error": false,
  "article": Immutable.Map {
    "title": "google",
    "uri": "https://google.com",
    "github": "",
    "description": "Search Engine",
    "image": "1548552844157-Screen Shot 2019-01-26 at 5.32.10 PM.png",
    "comments": Immutable.List [],
    "likes": 2,
  },
}
`;

exports[`homePageReducer handles the likeArticleError action 1`] = `
Immutable.Map {
  "loading": false,
  "error": Immutable.Map {},
  "article": Immutable.Map {
    "title": "google",
    "uri": "https://google.com",
    "github": "",
    "description": "Search Engine",
    "image": "1548552844157-Screen Shot 2019-01-26 at 5.32.10 PM.png",
    "comments": Immutable.List [],
    "likes": 1,
  },
}
`;

exports[`homePageReducer handles the likeArticleSuccess action 1`] = `
Immutable.Map {
  "loading": false,
  "error": false,
  "article": Immutable.Map {
    "title": "google",
    "uri": "https://google.com",
    "github": "",
    "description": "Search Engine",
    "image": "1548552844157-Screen Shot 2019-01-26 at 5.32.10 PM.png",
    "comments": Immutable.List [],
    "likes": 1,
  },
}
`;

exports[`homePageReducer handles the loadArticle action 1`] = `
Immutable.Map {
  "loading": true,
  "error": false,
  "article": false,
}
`;

exports[`homePageReducer handles the loadArticleError action 1`] = `
Immutable.Map {
  "loading": false,
  "error": Immutable.Map {},
  "article": Immutable.Map {
    "title": "google",
    "uri": "https://google.com",
    "github": "",
    "description": "Search Engine",
    "image": "1548552844157-Screen Shot 2019-01-26 at 5.32.10 PM.png",
    "comments": Immutable.List [],
    "likes": 1,
  },
}
`;

exports[`homePageReducer handles the loadArticleSuccess action 1`] = `
Immutable.Map {
  "loading": false,
  "error": false,
  "article": Immutable.Map {},
}
`;

exports[`homePageReducer handles the loadComments action 1`] = `
Immutable.Map {
  "loading": true,
  "error": false,
  "article": Immutable.Map {
    "title": "google",
    "uri": "https://google.com",
    "github": "",
    "description": "Search Engine",
    "image": "1548552844157-Screen Shot 2019-01-26 at 5.32.10 PM.png",
    "comments": Immutable.List [],
    "likes": 1,
  },
}
`;

exports[`homePageReducer handles the loadCommentsError action 1`] = `
Immutable.Map {
  "loading": false,
  "error": Immutable.Map {},
  "article": Immutable.Map {
    "title": "google",
    "uri": "https://google.com",
    "github": "",
    "description": "Search Engine",
    "image": "1548552844157-Screen Shot 2019-01-26 at 5.32.10 PM.png",
    "comments": Immutable.List [],
    "likes": 1,
  },
}
`;

exports[`homePageReducer handles the loadCommentsSuccess action 1`] = `
Immutable.Map {
  "loading": false,
  "error": false,
  "article": Immutable.Map {
    "title": "google",
    "uri": "https://google.com",
    "github": "",
    "description": "Search Engine",
    "image": "1548552844157-Screen Shot 2019-01-26 at 5.32.10 PM.png",
    "comments": Immutable.List [],
    "likes": 1,
  },
}
`;

exports[`homePageReducer returns the initial state 1`] = `
Immutable.Map {
  "loading": false,
  "error": false,
  "article": false,
}
`;
